deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: endoscope
  labels:
    app: endoscope
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: endoscope
