deploy/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endoscope
  labels:
    app: endoscope
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: endoscope.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: endoscope
                port:
                  name: http
